FISH-8652: Downgrade file reading in InstanceTrackingInfoTest